Pingpong/manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: log-pingpong-pv
          persistentVolumeClaim:
            claimName: log-pingpong-claim 
      containers:
        - name: pingpong
          image: mlipsan/pingpong:v1.11.00
          volumeMounts:
          - name: log-pingpong-pv
            mountPath: /usr/src/app/files
