Pingpong/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-dep
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - name: pingpong
        image: mlipsan/pingpong:4.1
        readinessProbe:
          initialDelaySeconds: 10 
          periodSeconds: 5 
          httpGet:
            path: /healthz
            port: 3000
        livenessProbe:
          initialDelaySeconds: 10 
          periodSeconds: 5 
          httpGet:
            path: /healthz
            port: 3000
  strategy:
    canary:
      steps:
      - analysis:
          templates:
          - templateName: cpu-rate
