Pingpong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-pingpong-ingress
  namespace: app-space
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /pingpong
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2345
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: log-output-svc
            port:
              number: 1234
